--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,8 @@
     "sharp": "^0.34.2"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vite": "^5.0.0"
   }
 }
