--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,120 @@
 {
-  "name": "image-converter-app",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Full stack image converter using Vite + React + Node + Sharp",
-  "main": "server/server.js",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "accepts": "^2.0.0",
+    "append-field": "^1.0.0",
+    "body-parser": "^2.2.0",
+    "buffer-from": "^1.1.2",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "color": "^4.2.3",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-string": "^1.9.1",
+    "concat-stream": "^1.6.2",
+    "content-disposition": "^1.0.0",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.2",
+    "cookie-signature": "^1.2.2",
+    "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
+    "debug": "^4.4.1",
+    "depd": "^2.0.0",
+    "detect-libc": "^2.0.4",
+    "dunder-proto": "^1.0.1",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^2.0.0",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "esbuild": "^0.21.5",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^5.1.0",
+    "finalhandler": "^2.1.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^2.0.0",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "gopd": "^1.2.0",
+    "has-symbols": "^1.1.0",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.6.3",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-arrayish": "^0.3.2",
+    "is-promise": "^4.0.0",
+    "isarray": "^1.0.0",
+    "js-tokens": "^4.0.0",
+    "loose-envify": "^1.4.0",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^1.1.0",
+    "merge-descriptors": "^2.0.0",
+    "mime-db": "^1.54.0",
+    "mime-types": "^3.0.1",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.6",
+    "ms": "^2.1.3",
+    "multer": "^2.0.0",
+    "nanoid": "^3.3.11",
+    "negotiator": "^1.0.0",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^8.2.0",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.4",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.7",
+    "qs": "^6.14.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "readable-stream": "^2.3.8",
+    "rollup": "^4.41.1",
+    "router": "^2.2.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "scheduler": "^0.23.2",
+    "semver": "^7.7.2",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
+    "setprototypeof": "^1.2.0",
+    "sharp": "^0.34.2",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "simple-swizzle": "^0.2.2",
+    "source-map-js": "^1.2.1",
+    "statuses": "^2.0.1",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.1.1",
+    "toidentifier": "^1.0.1",
+    "type-is": "^2.0.1",
+    "typedarray": "^0.0.6",
+    "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "vary": "^1.1.2",
+    "vite": "^5.4.19",
+    "wrappy": "^1.0.2",
+    "xtend": "^4.0.2"
+  },
   "scripts": {
-    "start": "node server/server.js",
-    "build": "npm run build:react",
-    "build:react": "vite build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "multer": "^2.0.0",
-    "sharp": "^0.34.2"
-  },
-  "devDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "vite": "^5.0.0"
-  }
+  "license": "ISC"
 }
